@@ -51,6 +51,7 @@ import org.apache.kafka.common.serialization.Deserializer;
 import org.apache.kafka.common.serialization.Serializer;
 import org.apache.kafka.common.test.KafkaClusterTestKit;
 import org.apache.kafka.common.test.TestKitNodes;
+import org.apache.kafka.common.test.api.Flaky;
 import org.apache.kafka.coordinator.group.GroupConfig;
 import org.apache.kafka.test.TestUtils;
 
@@ -128,6 +129,7 @@ public class ShareConsumerTest {
             .setConfigProp("group.share.record.lock.duration.ms", "15000")
             .setConfigProp("offsets.topic.replication.factor", "1")
             .setConfigProp("share.coordinator.state.topic.min.isr", "1")
+            .setConfigProp("share.coordinator.state.topic.num.partitions", "3")
             .setConfigProp("share.coordinator.state.topic.replication.factor", "1")
             .setConfigProp("transaction.state.log.min.isr", "1")
             .setConfigProp("transaction.state.log.replication.factor", "1")
@@ -276,6 +278,7 @@ public class ShareConsumerTest {
         }
     }
 
+    @Flaky("KAFKA-18033")
     @ParameterizedTest(name = "{displayName}.persister={0}")
     @ValueSource(strings = {NO_OP_PERSISTER, DEFAULT_STATE_PERSISTER})
     public void testAcknowledgementSentOnSubscriptionChange(String persister) throws ExecutionException, InterruptedException {
@@ -291,7 +294,7 @@ public class ShareConsumerTest {
             ProducerRecord<byte[], byte[]> record2 = new ProducerRecord<>(tp2.topic(), tp2.partition(), null, "key".getBytes(), "value".getBytes());
             producer.send(record2).get();
             producer.flush();
-            shareConsumer.setAcknowledgementCommitCallback(new TestableAcknowledgeCommitCallback(partitionOffsetsMap, partitionExceptionMap));
+            shareConsumer.setAcknowledgementCommitCallback(new TestableAcknowledgementCommitCallback(partitionOffsetsMap, partitionExceptionMap));
 
             shareConsumer.subscribe(Collections.singleton(tp.topic()));
 
@@ -326,7 +329,7 @@ public class ShareConsumerTest {
             producer.send(record);
             producer.flush();
 
-            shareConsumer.setAcknowledgementCommitCallback(new TestableAcknowledgeCommitCallback(partitionOffsetsMap, partitionExceptionMap));
+            shareConsumer.setAcknowledgementCommitCallback(new TestableAcknowledgementCommitCallback(partitionOffsetsMap, partitionExceptionMap));
             shareConsumer.subscribe(Collections.singleton(tp.topic()));
 
             TestUtils.waitForCondition(() -> shareConsumer.poll(Duration.ofMillis(2000)).count() == 1,
@@ -354,7 +357,7 @@ public class ShareConsumerTest {
             ProducerRecord<byte[], byte[]> record = new ProducerRecord<>(tp.topic(), tp.partition(), null, "key".getBytes(), "value".getBytes());
             producer.send(record);
             producer.flush();
-            shareConsumer.setAcknowledgementCommitCallback(new TestableAcknowledgeCommitCallback(partitionOffsetsMap, partitionExceptionMap));
+            shareConsumer.setAcknowledgementCommitCallback(new TestableAcknowledgementCommitCallback(partitionOffsetsMap, partitionExceptionMap));
             shareConsumer.subscribe(Collections.singleton(tp.topic()));
 
             ConsumerRecords<byte[], byte[]> records = shareConsumer.poll(Duration.ofMillis(5000));
@@ -372,6 +375,7 @@ public class ShareConsumerTest {
         }
     }
 
+    @Flaky("KAFKA-18033")
     @ParameterizedTest(name = "{displayName}.persister={0}")
     @ValueSource(strings = {NO_OP_PERSISTER, DEFAULT_STATE_PERSISTER})
     public void testAcknowledgementCommitCallbackInvalidRecordStateException(String persister) throws Exception {
@@ -385,7 +389,7 @@ public class ShareConsumerTest {
             producer.send(record);
             producer.flush();
 
-            shareConsumer.setAcknowledgementCommitCallback(new TestableAcknowledgeCommitCallback(partitionOffsetsMap, partitionExceptionMap));
+            shareConsumer.setAcknowledgementCommitCallback(new TestableAcknowledgementCommitCallback(partitionOffsetsMap, partitionExceptionMap));
             shareConsumer.subscribe(Collections.singleton(tp.topic()));
 
             ConsumerRecords<byte[], byte[]> records = shareConsumer.poll(Duration.ofMillis(5000));
@@ -401,12 +405,12 @@ public class ShareConsumerTest {
         }
     }
 
-    private static class TestableAcknowledgeCommitCallback implements AcknowledgementCommitCallback {
+    private static class TestableAcknowledgementCommitCallback implements AcknowledgementCommitCallback {
         private final Map<TopicPartition, Set<Long>> partitionOffsetsMap;
         private final Map<TopicPartition, Exception> partitionExceptionMap;
 
-        public TestableAcknowledgeCommitCallback(Map<TopicPartition, Set<Long>> partitionOffsetsMap,
-                                                 Map<TopicPartition, Exception> partitionExceptionMap) {
+        public TestableAcknowledgementCommitCallback(Map<TopicPartition, Set<Long>> partitionOffsetsMap,
+                                                     Map<TopicPartition, Exception> partitionExceptionMap) {
             this.partitionOffsetsMap = partitionOffsetsMap;
             this.partitionExceptionMap = partitionExceptionMap;
         }
@@ -598,6 +602,7 @@ public class ShareConsumerTest {
         }
     }
 
+    @Flaky("KAFKA-18033")
     @ParameterizedTest(name = "{displayName}.persister={0}")
     @ValueSource(strings = {NO_OP_PERSISTER, DEFAULT_STATE_PERSISTER})
     public void testExplicitAcknowledgementCommitAsync(String persister) throws InterruptedException {
@@ -619,7 +624,7 @@ public class ShareConsumerTest {
 
             Map<TopicPartition, Set<Long>> partitionOffsetsMap1 = new HashMap<>();
             Map<TopicPartition, Exception> partitionExceptionMap1 = new HashMap<>();
-            shareConsumer1.setAcknowledgementCommitCallback(new TestableAcknowledgeCommitCallback(partitionOffsetsMap1, partitionExceptionMap1));
+            shareConsumer1.setAcknowledgementCommitCallback(new TestableAcknowledgementCommitCallback(partitionOffsetsMap1, partitionExceptionMap1));
 
             ConsumerRecords<byte[], byte[]> records = shareConsumer1.poll(Duration.ofMillis(5000));
             assertEquals(3, records.count());
@@ -654,6 +659,7 @@ public class ShareConsumerTest {
         }
     }
 
+    @Flaky("KAFKA-18033")
     @ParameterizedTest(name = "{displayName}.persister={0}")
     @ValueSource(strings = {NO_OP_PERSISTER, DEFAULT_STATE_PERSISTER})
     public void testExplicitAcknowledgementCommitAsyncPartialBatch(String persister) {
@@ -673,7 +679,7 @@ public class ShareConsumerTest {
 
             Map<TopicPartition, Set<Long>> partitionOffsetsMap = new HashMap<>();
             Map<TopicPartition, Exception> partitionExceptionMap = new HashMap<>();
-            shareConsumer1.setAcknowledgementCommitCallback(new TestableAcknowledgeCommitCallback(partitionOffsetsMap, partitionExceptionMap));
+            shareConsumer1.setAcknowledgementCommitCallback(new TestableAcknowledgementCommitCallback(partitionOffsetsMap, partitionExceptionMap));
 
             ConsumerRecords<byte[], byte[]> records = shareConsumer1.poll(Duration.ofMillis(5000));
             assertEquals(3, records.count());
@@ -760,6 +766,7 @@ public class ShareConsumerTest {
         }
     }
 
+    @Flaky("KAFKA-18033")
     @ParameterizedTest(name = "{displayName}.persister={0}")
     @ValueSource(strings = {NO_OP_PERSISTER, DEFAULT_STATE_PERSISTER})
     public void testExplicitAcknowledgeReleaseClose(String persister) {
@@ -864,7 +871,7 @@ public class ShareConsumerTest {
             Map<TopicPartition, Set<Long>> partitionOffsetsMap1 = new HashMap<>();
             Map<TopicPartition, Exception> partitionExceptionMap1 = new HashMap<>();
 
-            shareConsumer.setAcknowledgementCommitCallback(new TestableAcknowledgeCommitCallback(partitionOffsetsMap1, partitionExceptionMap1));
+            shareConsumer.setAcknowledgementCommitCallback(new TestableAcknowledgementCommitCallback(partitionOffsetsMap1, partitionExceptionMap1));
 
             ConsumerRecords<byte[], byte[]> records = shareConsumer.poll(Duration.ofMillis(5000));
             assertEquals(3, records.count());
@@ -993,6 +1000,7 @@ public class ShareConsumerTest {
         }
     }
 
+    @Flaky("KAFKA-18033")
     @ParameterizedTest(name = "{displayName}.persister={0}")
     @ValueSource(strings = {NO_OP_PERSISTER, DEFAULT_STATE_PERSISTER})
     public void testMultipleConsumersInGroupConcurrentConsumption(String persister) {
@@ -1271,61 +1279,74 @@ public class ShareConsumerTest {
         }
     }
 
+    @Flaky("KAFKA-18025")
     @ParameterizedTest(name = "{displayName}.persister={0}")
     @ValueSource(strings = {NO_OP_PERSISTER, DEFAULT_STATE_PERSISTER})
     public void testAcquisitionLockTimeoutOnConsumer(String persister) throws InterruptedException {
         alterShareAutoOffsetReset("group1", "earliest");
         try (KafkaProducer<byte[], byte[]> producer = createProducer(new ByteArraySerializer(), new ByteArraySerializer());
-             KafkaShareConsumer<byte[], byte[]> shareConsumer1 = createShareConsumer(new ByteArrayDeserializer(), new ByteArrayDeserializer(), "group1")) {
+             KafkaShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer(new ByteArrayDeserializer(), new ByteArrayDeserializer(), "group1")) {
 
             ProducerRecord<byte[], byte[]> producerRecord1 = new ProducerRecord<>(tp.topic(), tp.partition(), null,
                 "key_1".getBytes(), "value_1".getBytes());
             ProducerRecord<byte[], byte[]> producerRecord2 = new ProducerRecord<>(tp.topic(), tp.partition(), null,
                 "key_2".getBytes(), "value_2".getBytes());
-            shareConsumer1.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
 
+            // Produce a first record which is consumed and acknowledged normally.
             producer.send(producerRecord1);
             producer.flush();
 
-            // Poll two times to receive records. The first poll puts the acquisition lock and fetches the record.
-            // Since, we are only sending one record and acquisition lock hasn't timed out, the second poll only acknowledges the
-            // record from the first poll and no more fetch.
-            ConsumerRecords<byte[], byte[]> records1 = shareConsumer1.poll(Duration.ofMillis(5000));
-            assertEquals(1, records1.count());
-            assertEquals("key_1", new String(records1.iterator().next().key()));
-            assertEquals("value_1", new String(records1.iterator().next().value()));
-            ConsumerRecords<byte[], byte[]> records2 = shareConsumer1.poll(Duration.ofMillis(500));
-            assertEquals(0, records2.count());
+            // Poll twice to receive records. The first poll fetches the record and starts the acquisition lock timer.
+            // Since, we are only sending one record and the acquisition lock hasn't timed out, the second poll only
+            // acknowledges the record from the first poll and does not fetch any more records.
+            ConsumerRecords<byte[], byte[]> consumerRecords = shareConsumer.poll(Duration.ofMillis(5000));
+            ConsumerRecord<byte[], byte[]> consumerRecord = consumerRecords.records(tp).get(0);
+            assertEquals("key_1", new String(consumerRecord.key()));
+            assertEquals("value_1", new String(consumerRecord.value()));
+            assertEquals(1, consumerRecords.count());
 
+            consumerRecords = shareConsumer.poll(Duration.ofMillis(1000));
+            assertEquals(0, consumerRecords.count());
+
+            // Produce a second record which is fetched, but not acknowledged before it times out. The record will
+            // be released automatically by the broker. It is then fetched again and acknowledged normally.
             producer.send(producerRecord2);
+            producer.flush();
 
-            // Poll three times. The first poll puts the acquisition lock and fetches the record. Before the second poll,
-            // acquisition lock times out and hence the consumer needs to fetch the record again. Since, the acquisition lock
-            // hasn't timed out before the third poll, the third poll only acknowledges the record from the second poll and no more fetch.
-            records1 = shareConsumer1.poll(Duration.ofMillis(5000));
-            assertEquals(1, records1.count());
-            assertEquals("key_2", new String(records1.iterator().next().key()));
-            assertEquals("value_2", new String(records1.iterator().next().value()));
+            // Poll three more times. The first poll fetches the second record and starts the acquisition lock timer.
+            // Before the second poll, acquisition lock times out and hence the consumer needs to fetch the record again.
+            // The acquisition lock doesn't time out between the second and third polls, so the third poll only acknowledges
+            // the record from the second poll and does not fetch any more records.
+            consumerRecords = shareConsumer.poll(Duration.ofMillis(5000));
+            consumerRecord = consumerRecords.records(tp).get(0);
+            assertEquals("key_2", new String(consumerRecord.key()));
+            assertEquals("value_2", new String(consumerRecord.value()));
+            assertEquals(1, consumerRecords.count());
 
-            // Allowing acquisition lock to expire.
+            // Allow the acquisition lock to time out.
             Thread.sleep(20000);
 
-            records2 = shareConsumer1.poll(Duration.ofMillis(5000));
-            assertEquals(1, records2.count());
-            assertEquals("key_2", new String(records2.iterator().next().key()));
-            assertEquals("value_2", new String(records2.iterator().next().value()));
-            ConsumerRecords<byte[], byte[]> records3 = shareConsumer1.poll(Duration.ofMillis(500));
-            assertEquals(0, records3.count());
+            consumerRecords = shareConsumer.poll(Duration.ofMillis(5000));
+            consumerRecord = consumerRecords.records(tp).get(0);
+            // By checking the key and value before the count, we get a bit more information if too many records are returned.
+            // This test has been observed to fail very occasionally because of this.
+            assertEquals("key_2", new String(consumerRecord.key()));
+            assertEquals("value_2", new String(consumerRecord.value()));
+            assertEquals(1, consumerRecords.count());
+
+            consumerRecords = shareConsumer.poll(Duration.ofMillis(1000));
+            assertEquals(0, consumerRecords.count());
         }
     }
 
     /**
      * Test to verify that the acknowledgement commit callback cannot invoke methods of KafkaShareConsumer.
-     * The exception thrown is verified in {@link TestableAcknowledgeCommitCallbackWithShareConsumer}
+     * The exception thrown is verified in {@link TestableAcknowledgementCommitCallbackWithShareConsumer}
      */
     @ParameterizedTest(name = "{displayName}.persister={0}")
     @ValueSource(strings = {NO_OP_PERSISTER, DEFAULT_STATE_PERSISTER})
-    public void testAcknowledgeCommitCallbackCallsShareConsumerDisallowed(String persister) {
+    public void testAcknowledgementCommitCallbackCallsShareConsumerDisallowed(String persister) {
         alterShareAutoOffsetReset("group1", "earliest");
         try (KafkaProducer<byte[], byte[]> producer = createProducer(new ByteArraySerializer(), new ByteArraySerializer());
              KafkaShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer(new ByteArrayDeserializer(), new ByteArrayDeserializer(), "group1")) {
@@ -1334,7 +1355,7 @@ public class ShareConsumerTest {
             producer.send(record);
             producer.flush();
 
-            shareConsumer.setAcknowledgementCommitCallback(new TestableAcknowledgeCommitCallbackWithShareConsumer<>(shareConsumer));
+            shareConsumer.setAcknowledgementCommitCallback(new TestableAcknowledgementCommitCallbackWithShareConsumer<>(shareConsumer));
             shareConsumer.subscribe(Collections.singleton(tp.topic()));
 
             // The acknowledgment commit callback will try to call a method of KafkaShareConsumer
@@ -1346,10 +1367,10 @@ public class ShareConsumerTest {
         }
     }
 
-    private class TestableAcknowledgeCommitCallbackWithShareConsumer<K, V> implements AcknowledgementCommitCallback {
+    private class TestableAcknowledgementCommitCallbackWithShareConsumer<K, V> implements AcknowledgementCommitCallback {
         private final KafkaShareConsumer<K, V> shareConsumer;
 
-        TestableAcknowledgeCommitCallbackWithShareConsumer(KafkaShareConsumer<K, V> shareConsumer) {
+        TestableAcknowledgementCommitCallbackWithShareConsumer(KafkaShareConsumer<K, V> shareConsumer) {
             this.shareConsumer = shareConsumer;
         }
 
@@ -1366,9 +1387,10 @@ public class ShareConsumerTest {
      * Test to verify that the acknowledgement commit callback can invoke KafkaShareConsumer.wakeup() and it
      * wakes up the enclosing poll.
      */
+    @Flaky("KAFKA-18033")
     @ParameterizedTest(name = "{displayName}.persister={0}")
     @ValueSource(strings = {NO_OP_PERSISTER, DEFAULT_STATE_PERSISTER})
-    public void testAcknowledgeCommitCallbackCallsShareConsumerWakeup(String persister) throws InterruptedException {
+    public void testAcknowledgementCommitCallbackCallsShareConsumerWakeup(String persister) throws InterruptedException {
         alterShareAutoOffsetReset("group1", "earliest");
         try (KafkaProducer<byte[], byte[]> producer = createProducer(new ByteArraySerializer(), new ByteArraySerializer());
              KafkaShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer(new ByteArrayDeserializer(), new ByteArrayDeserializer(), "group1")) {
@@ -1378,7 +1400,7 @@ public class ShareConsumerTest {
             producer.flush();
 
             // The acknowledgment commit callback will try to call a method of KafkaShareConsumer
-            shareConsumer.setAcknowledgementCommitCallback(new TestableAcknowledgeCommitCallbackWakeup<>(shareConsumer));
+            shareConsumer.setAcknowledgementCommitCallback(new TestableAcknowledgementCommitCallbackWakeup<>(shareConsumer));
             shareConsumer.subscribe(Collections.singleton(tp.topic()));
 
             TestUtils.waitForCondition(() -> shareConsumer.poll(Duration.ofMillis(2000)).count() == 1,
@@ -1401,10 +1423,10 @@ public class ShareConsumerTest {
         }
     }
 
-    private static class TestableAcknowledgeCommitCallbackWakeup<K, V> implements AcknowledgementCommitCallback {
+    private static class TestableAcknowledgementCommitCallbackWakeup<K, V> implements AcknowledgementCommitCallback {
         private final KafkaShareConsumer<K, V> shareConsumer;
 
-        TestableAcknowledgeCommitCallbackWakeup(KafkaShareConsumer<K, V> shareConsumer) {
+        TestableAcknowledgementCommitCallbackWakeup(KafkaShareConsumer<K, V> shareConsumer) {
             this.shareConsumer = shareConsumer;
         }
 
@@ -1418,9 +1440,10 @@ public class ShareConsumerTest {
      * Test to verify that the acknowledgement commit callback can throw an exception, and it is propagated
      * to the caller of poll().
      */
+    @Flaky("KAFKA-18033")
     @ParameterizedTest(name = "{displayName}.persister={0}")
     @ValueSource(strings = {NO_OP_PERSISTER, DEFAULT_STATE_PERSISTER})
-    public void testAcknowledgeCommitCallbackThrowsException(String persister) throws InterruptedException {
+    public void testAcknowledgementCommitCallbackThrowsException(String persister) throws InterruptedException {
         alterShareAutoOffsetReset("group1", "earliest");
         try (KafkaProducer<byte[], byte[]> producer = createProducer(new ByteArraySerializer(), new ByteArraySerializer());
              KafkaShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer(new ByteArrayDeserializer(), new ByteArrayDeserializer(), "group1")) {
@@ -1429,7 +1452,7 @@ public class ShareConsumerTest {
             producer.send(record);
             producer.flush();
 
-            shareConsumer.setAcknowledgementCommitCallback(new TestableAcknowledgeCommitCallbackThrows<>());
+            shareConsumer.setAcknowledgementCommitCallback(new TestableAcknowledgementCommitCallbackThrows<>());
             shareConsumer.subscribe(Collections.singleton(tp.topic()));
 
             TestUtils.waitForCondition(() -> shareConsumer.poll(Duration.ofMillis(2000)).count() == 1,
@@ -1447,10 +1470,10 @@ public class ShareConsumerTest {
         }
     }
 
-    private static class TestableAcknowledgeCommitCallbackThrows<K, V> implements AcknowledgementCommitCallback {
+    private static class TestableAcknowledgementCommitCallbackThrows<K, V> implements AcknowledgementCommitCallback {
         @Override
         public void onComplete(Map<TopicIdPartition, Set<Long>> offsetsMap, Exception exception) {
-            throw new org.apache.kafka.common.errors.OutOfOrderSequenceException("Exception thrown in TestableAcknowledgeCommitCallbackThrows.onComplete");
+            throw new org.apache.kafka.common.errors.OutOfOrderSequenceException("Exception thrown in TestableAcknowledgementCommitCallbackThrows.onComplete");
         }
     }
 
@@ -1969,7 +1992,9 @@ public class ShareConsumerTest {
         try (KafkaProducer<byte[], byte[]> producer = createProducer(new ByteArraySerializer(), new ByteArraySerializer());
              KafkaShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer(new ByteArrayDeserializer(), new ByteArrayDeserializer(), "warmupgroup1")) {
 
-            producer.send(record).get(15000, TimeUnit.MILLISECONDS);
+            producer.send(record);
+            producer.flush();
+
             shareConsumer.subscribe(subscription);
             TestUtils.waitForCondition(
                 () -> shareConsumer.poll(Duration.ofMillis(5000)).count() == 1, 30000, 200L, () -> "warmup record not received");
